--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    
+    <div class="game">
+        <div class="information">Turn: Round: Winner: </div>
+        <button id="asd">NE NYOMD MEG</button>
+        <div class="board">
+            <div class="cell" data-index-y="0" data-index-x="0"></div>
+            <div class="cell" data-index-y="0" data-index-x="1"></div>
+            <div class="cell" data-index-y="0" data-index-x="2"></div>
+            <div class="cell" data-index-y="1" data-index-x="0"></div>
+            <div class="cell" data-index-y="1" data-index-x="1"></div>
+            <div class="cell" data-index-y="1" data-index-x="2"></div>
+            <div class="cell" data-index-y="2" data-index-x="0"></div>
+            <div class="cell" data-index-y="2" data-index-x="1"></div>
+            <div class="cell" data-index-y="2" data-index-x="2"></div>
+        </div>
+    </div>
 </body>
 </html>
